data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2203.wast
;; 3. **Test Description:** Write a loop with a `br_table` branching to an undefined label when the operand is within bounds. Ensure `wizard_engine` halts with an error while WebAssembly traps, handling the improper branch gracefully.

(assert_invalid
  (module (func
    (block (loop (br_table 0 2 (i32.const 0))))
  ))
  "unknown label"
)